<resources>
    <string name="app_name">AnimationLayouts</string>
    <string name="russianspy">\@russianSpy</string>
    <string name="russian_spy">Russian Spy</string>
    <string name="explore">Explore</string>
    <string name="add_ons">Add Ons</string>
    <string name="side_bar_animation">Side bar Animation</string>
    <string name="page_one">Page One</string>
    <string name="page_two">Page Two</string>
    <string name="press_the_sos_button_in_case_of_emergency">Press the SOS button in case of Emergency</string>
    <string name="title_activity_page_three">PageThreeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop">Shop</string>
</resources>
